Utilize Jackson JSON by default, fallback to GSON.